--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build-prod": "ng build --watch --configuration=production --output-hashing=all",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:ecom": "node dist/ecom/server/server.mjs"
@@ -23,9 +24,15 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.0",
+    "@ngrx/effects": "^17.2.0",
+    "@ngrx/store": "^17.2.0",
+    "@ngrx/store-devtools": "^19.0.0",
+    "deps": "^1.0.0",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
+    "source-map-explorer": "^2.5.3",
     "tslib": "^2.3.0",
+    "uninstall": "^0.0.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
